--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </div>
   </nav>
   <div id="auth"></div>
-  <div id="boards" class="hide">I SEE BOARDS</div>
+  <div id="boards" class="hide"></div>
 
 </body>
 </html>
