created pins components that prints pins to doms and gathers pins from firebase database

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   </nav>
   <div id="auth"></div>
   <div id="boards" class="hide"></div>
+  <div id="pins" class="hide"></div>
 
 </body>
 </html>
