working on a get function to present the different boards' pins

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,16 @@
     </div>
   </nav>
   <div id="auth"></div>
-  <div id="boards" class="hide"></div>
-  <div id="pins" class="hide"></div>
+  <div class="row">
+    <div class="col-md-8">
+      <div id="boards" class="hide"></div>
+      <div id="pins" class="hide"></div>
+    </div>
+    <div class="col-md-4">
+      <div id="boardPins" class="hide"></div>
+    </div>
+  </div>
+ 
 
 </body>
 </html>
