wip, domString prints featured board and board.name but not pin.name nor pin.imgURL

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <div id="pins" class="hide"></div>
     </div>
     <div class="col-md-4">
-      <div id="boardPins" class="hide"></div>
+      <div id="boardPins"></div>
     </div>
   </div>
  
